<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This file is part of Studi Android.
  ~
  ~ Studi Android is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Studi Android is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Studi Android. If not, see <http://www.gnu.org/licenses/>.
  ~
  ~ Copyright (c) 2022 by Patrick Zedler
  -->

<androidx.coordinatorlayout.widget.CoordinatorLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <com.google.android.material.appbar.AppBarLayout
    android:id="@+id/app_bar_plan"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize">

      <FrameLayout
        android:id="@+id/frame_plan_logo"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:layout_gravity="start|center_vertical">

        <ImageView
          android:id="@+id/image_plan_logo"
          android:layout_width="32dp"
          android:layout_height="32dp"
          android:layout_gravity="center"
          android:importantForAccessibility="no"
          android:src="@drawable/ic_round_github" />

      </FrameLayout>

      <TextView
        style="@style/Widget.Doodle.TextView.Toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:text="@string/app_name" />

      <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_plan"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        app:menu="@menu/menu_main" />

    </FrameLayout>

  </com.google.android.material.appbar.AppBarLayout>

  <FrameLayout
    android:id="@+id/frame_plan_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize">

    <LinearLayout
      android:id="@+id/linear_plan_welcome_container"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_gravity="center"
      android:padding="16dp">

      <TextView
        style="@style/Widget.Doodle.TextView.ListItem.Title"
        android:text="@string/msg_welcome"
        android:textSize="@dimen/m3_sys_typescale_headline_medium_text_size"
        android:fontFamily="@font/jost_medium"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_marginBottom="16dp"/>

      <TextView
        style="@style/Widget.Doodle.TextView.ListItem.Title"
        android:text="@string/msg_welcome_subtitle"
        android:textSize="@dimen/m3_sys_typescale_body_large_text_size"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_marginBottom="16dp"/>

      <com.google.android.material.button.MaterialButton
        android:id="@+id/button_plan_download"
        style="@style/Widget.Doodle.Button.UnelevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/action_download_plan" />

    </LinearLayout>

    <ListView
      android:id="@+id/list_plan"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:visibility="gone" />

  </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>