<?xml version="1.0" encoding="utf-8"?><!--
  ~ This file is part of Studi Android.
  ~
  ~ Studi Android is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Studi Android is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Studi Android. If not, see <http://www.gnu.org/licenses/>.
  ~
  ~ Copyright (c) 2020-2021 by Patrick Zedler
  -->

<androidx.coordinatorlayout.widget.CoordinatorLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <com.google.android.material.appbar.AppBarLayout
    android:id="@+id/app_bar_overview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout
      android:layout_width="match_parent"
      android:layout_height="?android:actionBarSize"
      android:gravity="center_vertical">

      <FrameLayout
        android:id="@+id/frame_no_data_logo"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:layout_gravity="center_vertical|start">

        <ImageView
          android:id="@+id/image_no_data_logo"
          android:layout_width="48dp"
          android:layout_height="48dp"
          android:layout_gravity="center"
          android:importantForAccessibility="no"
          android:src="@drawable/ic_round_studi_logo" />

      </FrameLayout>

      <TextView
        style="@style/Widget.Studi.TextView.Toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name" />

      <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_overview"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        app:menu="@menu/menu_main" />

    </FrameLayout>

  </com.google.android.material.appbar.AppBarLayout>

  <androidx.core.widget.NestedScrollView
    android:id="@+id/scroll_overview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?android:actionBarSize">

    <LinearLayout
      android:id="@+id/linear_overview_container"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingTop="16dp"
      android:paddingBottom="8dp"
      android:orientation="vertical">

      <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_overview_info"
        style="@style/Widget.Studi.Card.Text">

        <TextView
          style="@style/Widget.Studi.TextView.Paragraph"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/on_background"
          android:text="@string/msg_feedback" />

      </com.google.android.material.card.MaterialCardView>

      <LinearLayout
        android:id="@+id/linear_overview_about"
        style="@style/Widget.Studi.LinearLayout.ListItem.TwoLine.Icon.Clickable"
        android:layout_marginTop="8dp">

        <ImageView
          android:id="@+id/image_overview_about"
          style="@style/Widget.Studi.ImageView.ListItem.Icon"
          android:src="@drawable/ic_round_info_outline"
          tools:ignore="ContentDescription" />

        <LinearLayout style="@style/Widget.Studi.LinearLayout.ListItem.TextBox">

          <TextView
            style="@style/Widget.Studi.TextView.ListItem.Title"
            android:text="@string/title_about" />

          <TextView
            style="@style/Widget.Studi.TextView.ListItem.Description"
            android:text="@string/action_email_description" />

        </LinearLayout>

      </LinearLayout>

    </LinearLayout>

  </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>